src/components/UI/Button/Button.module.css
.button {
  font-weight: 700;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 1.4rem;
}

.button1,
.button2,
.button3,
.button4 {
  padding: 1.4rem 2rem;
  border-radius: 10rem;
}

.button1 {
  background-color: var(--color-main);
  color: #ffffff;
}

.button1.buttonWithIcon {
  padding: 0.8rem 2rem 0.8rem 0.8rem;
}

.button1.buttonWithIcon svg {
  background-color: #ffffff;
  padding: 1rem;
  border-radius: 10rem;
  box-sizing: content-box;
}

.button1.buttonWithIcon svg path {
  fill: var(--color-main);
}

.button2 {
  background-color: #f9fafe;
  color: var(--color-light-text-and-icons);
}

body[data-theme='dark'] .button2 {
  background-color: #252945;
  color: #dfe3fa;
}

.button2.buttonWithIcon svg path {
  fill: var(--color-light-text-and-icons);
}

.button3 {
  background-color: #373b53;
  color: #888eb0;
}

body[data-theme='dark'] .button3 {
  background-color: #373b53;
  color: #dfe3fa;
}

.button4 {
  background-color: #ec5757;
  color: #ffffff;
}

